--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* text-align: center; */
+    /* margin-left: 200px; */
     line-height: 30px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -171,7 +171,7 @@
 }
 
 .main-section2>.section2>.center {
-    align-items: center;
+    margin-left: 280px;
 }
 
 .main-section2>.section-screenshot {
@@ -570,4 +570,25 @@
     .main-section2>.section2-graph {
         font-size: 15px;
     }
+}
+
+@media screen and (max-width:300px) {
+    .section7 {
+        padding-left: 10px;
+    }
+
+    .section1>.section1-heading {
+        font-size: 35px;
+        line-height: 35px;
+        padding-left: 10px;
+    }
+
+    .main-section2>.section2>.center {
+        margin-left: 10px;
+    }
+
+    .main-section2>.section2>.center {
+        margin-left: 280px;
+    }
+
 }
